# ai-gtm-lab-faiss-rag

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  eval_results.csv  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
apps/track_a_b2b_sales_eng_assistant/: main.py
apps/track_a_b2b_sales_eng_assistant/data/: case_study_001.txt  case_study_1.txt  case_study_2.txt  case_study_large_retail.txt  competitive_comparison_segment.txt  contract_001.txt  enablement_fortune500_it.txt  enablement_packet_001.txt  enterprise_contract.txt  faq.txt  faq_003.txt  hipaa_compliance.txt  integration_snowflake.txt  sales_material_001.txt  sales_material_002.txt  sales_pitch.txt  sample_contract.txt  security_certifications.txt  security_doc_001.txt  security_doc_002.txt  security_overview.txt  unique_value_mops.txt
apps/track_a_b2b_sales_eng_assistant/evals/: b2b_eval_runner.py  eval_set.json
apps/track_a_b2c_product_advisor/: main.py  requirements.txt
apps/track_a_b2c_product_advisor/data/: catalog.csv  return_policy.json  reviews.json
apps/track_a_b2c_product_advisor/evals/: eval_set.json  run_eval.py
